# CH341Locator

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  debug-demo-exe-crash.md  reasonix.toml
.github/workflows/: build.yml
docs/: patent-disclosure.md  test-flow.md
docs/superpowers/plans/: 2026-06-18-ch341locator-dll.md  2026-06-18-ch341locator-utf8-labview.md
docs/superpowers/specs/: 2026-06-18-ch341locator-dll-design.md  2026-06-18-ch341locator-utf8-labview-design.md  2026-06-22-ch341locator-crossplatform-design.md
examples/: ch341locator_demo.cpp
include/: CH341Locator.h
src/: CH341Locator.cpp  backend.h  backend_linux.cpp  backend_macos.mm  backend_windows.cpp
tests/: mock_backend.cpp  test_ch341locator.cpp
